<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white226"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    tools:context=".accounts.AccountsFrag"
    tools:listitem="@layout/list_item_account" />
