<resources>
    <string name="app_name">uPort android</string>
    <string name="large_text">
        "Lorem ipsum dolor sit amet\n\n"
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="scanner_screen_label">Scanner</string>
    <string name="scan_barcode_prompt">Scan QR code</string>
    <string name="notifications_screen_label">Notifications</string>
    <string name="not_implemented">Not implemented</string>
    <string name="notifications">Notifications</string>
    <string name="tab_text_1">Verifications</string>
    <string name="tab_text_2">Accounts</string>
    <string name="tab_text_3">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="verifications_list_lorem_ipsum">Lorem ipsum list of verifications</string>
    <string name="accounts_list_lorem_ipsum">Lorem ipsum list of accounts</string>
    <string name="contacts_list_lorem_ipsum">Lorem ipsum list of contacts</string>
    <string name="avatar_description">Avatar image</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lorem_ipsum_user_name">Lorem R Daneel Olivaw</string>
    <string name="user_profile_screen_title">My Information</string>

    <string name="title_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_account_recovery">Account recovery</string>
    <string name="title_account_backup">Account backup</string>
    <string name="title_try_uport">Try uPort</string>
    <string name="action_edit">Edit</string>
    <string name="action_view_profile">View</string>
    <string name="user_name_hint">type your name</string>
    <string name="edit_profile_screen_title">Edit profile</string>
    <string name="title_terms_of_service">Terms of Service</string>
    <string name="title_mobile_identity">Mobile Identity</string>
    <string name="title_onboarding_progress">Wrapping up</string>
    <string name="title_recover_your_identity">Recover Identity</string>
    <string name="btn_recover_identity">Recover Identity</string>
    <string name="btn_create_identity">Create Identity</string>
    <string name="identity_creation_success">Congratulations\nYour identity has been created</string>
    <string name="identity_creation_error">There was an error.</string>
    <string name="btn_continue">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="identity_creation_in_progress">Your identity is being created</string>

    <string name="content_desc_uport_logo">uport logo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_accept">Accept</string>
    <string name="title_tos">Terms and Conditions</string>
    <string name="tos_modified_at">Last modified May 24, 2018</string>
    <string name="hint_enter_12_word_recovery_phrase">Enter 12 word recovery phrase</string>
    <string name="title_enter_phrase">Enter recovery phrase</string>
    <string name="btn_next">Next</string>
    <string name="recovery_instructions">To recover your account you will need to enter the 12 words of your recovery seed phrase in the order you received them.</string>
    <string name="btn_qr_code_description">Share your contact through a QR code</string>
    <string name="btn_share_contact_description">Share your contact</string>

</resources>
