...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_create"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_create_identity"
        app:layout_constraintBottom_toTopOf="@+id/btn_recover"
        app:layout_constraintEnd_toEndOf="@+id/btn_recover"
        app:layout_constraintStart_toStartOf="@+id/btn_recover" />

    <Button
        android:id="@+id/btn_recover"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
...
